@@ -8,7 +8,7 @@ begin
     gem.summary = %Q{An ActiveRecord-like model that uses a hash or file as a datasource}
     gem.email = "jeff@zilkey.com"
     gem.homepage = "http://github.com/zilkey/active_hash"
-    gem.authors = ["Jeff Dean", "Mike Dalessio", "Corey Innis", "Peter Jaros"]
+    gem.authors = ["Jeff Dean", "Mike Dalessio", "Corey Innis", "Peter Jaros", "Brandon Keene", "Brian Takita", "Pat Nakajima"]
     gem.add_dependency('activesupport', [">= 2.2.2"])
   end
 
